--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="4KvcUh-CPdB45ZfhPEaCl5ibr_Xp43Ek8dJyJoEr4MU" />
   <title>工具下載 | Tool Download</title>
   <style>
     body {
