--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
+  <meta name="google-site-verification" content="4KvcUh-CPdB45ZfhPEaCl5ibr_Xp43Ek8dJyJoEr4MU" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="google-site-verification" content="4KvcUh-CPdB45ZfhPEaCl5ibr_Xp43Ek8dJyJoEr4MU" />
+  <meta name="description" content="免費好用的 Windows 截圖工具，支援多螢幕、區域截圖、快速複製，免安裝，立即下載！">
+  <meta name="keywords" content="截圖工具, screenshot, snapshot, 螢幕擷取, 免費軟體, printscreen">
+  <meta name="author" content="jodomade777">
+  <title>免費截圖工具 | Snapshot Tool for Windows</title>
   <title>工具下載 | Tool Download</title>
   <style>
     body {
