--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h1>我的工具下載</h1>
       <p>這是一個免費的小工具，歡迎下載使用。如果你覺得有幫助，也可以考慮贊助支持我繼續開發！</p>
 
-      <a class="download-btn" href="https://www.dropbox.com/scl/fi/duex1bdae54ch4z9d0cp2/ScreenShot_V6_Setup.zip?rlkey=ihkldzv49htyagg5qcjx8hmk3&st=xzr9wi4e&dl=0" download>📦 下載小工具</a>
+      <a class="download-btn" href="https://github.com/user-attachments/files/20498455/ScreenShot_V6_2.zip" download>📦 下載小工具</a>
 
       <h2>使用方式</h2>
       <p>
